// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays stations from state 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <MapView
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <Marker
        coordinate={
          Object {
            "latitude": 50,
            "latitudeDelta": 0.01,
            "longitude": 50,
            "longitudeDelta": 0.01,
          }
        }
      />
      <Marker
        coordinate={
          Object {
            "availableBikes": 1,
            "latitude": 50,
            "longitude": 60,
            "stationName": "station1",
          }
        }
        description="1 bikes available"
        onPress={[Function]}
        title="station1"
      >
        <View
          style={
            Object {
              "backgroundColor": "red",
              "borderRadius": 10,
              "height": 15,
              "width": 15,
            }
          }
        />
      </Marker>
    </View>
  </MapView>
</View>
`;

exports[`renders a trip with marker in location and destination 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <MapView
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <Marker
          coordinate={
            Object {
              "latitude": 0,
              "latitudeDelta": 0.01,
              "longitude": 0,
              "longitudeDelta": 0.01,
            }
          }
          pinColor="blue"
        />
        <Marker
          coordinate={
            Object {
              "latitude": 199,
              "longitude": 199,
            }
          }
        />
      </View>
    </View>
  </MapView>
</View>
`;
